; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx4/extr_srq.c_mlx4_free_srq_wqe.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx4/extr_srq.c_mlx4_free_srq_wqe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_srq = type { i32, i32 }
%struct.mlx4_wqe_srq_next_seg = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx4_free_srq_wqe(%struct.mlx4_srq* %0, i32 %1) #0 {
  %3 = alloca %struct.mlx4_srq*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlx4_wqe_srq_next_seg*, align 8
  store %struct.mlx4_srq* %0, %struct.mlx4_srq** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.mlx4_srq*, %struct.mlx4_srq** %3, align 8
  %7 = getelementptr inbounds %struct.mlx4_srq, %struct.mlx4_srq* %6, i32 0, i32 1
  %8 = call i32 @pthread_spin_lock(i32* %7)
  %9 = load %struct.mlx4_srq*, %struct.mlx4_srq** %3, align 8
  %10 = load %struct.mlx4_srq*, %struct.mlx4_srq** %3, align 8
  %11 = getelementptr inbounds %struct.mlx4_srq, %struct.mlx4_srq* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call %struct.mlx4_wqe_srq_next_seg* @get_wqe(%struct.mlx4_srq* %9, i32 %12)
  store %struct.mlx4_wqe_srq_next_seg* %13, %struct.mlx4_wqe_srq_next_seg** %5, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @htobe16(i32 %14)
  %16 = load %struct.mlx4_wqe_srq_next_seg*, %struct.mlx4_wqe_srq_next_seg** %5, align 8
  %17 = getelementptr inbounds %struct.mlx4_wqe_srq_next_seg, %struct.mlx4_wqe_srq_next_seg* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load %struct.mlx4_srq*, %struct.mlx4_srq** %3, align 8
  %20 = getelementptr inbounds %struct.mlx4_srq, %struct.mlx4_srq* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load %struct.mlx4_srq*, %struct.mlx4_srq** %3, align 8
  %22 = getelementptr inbounds %struct.mlx4_srq, %struct.mlx4_srq* %21, i32 0, i32 1
  %23 = call i32 @pthread_spin_unlock(i32* %22)
  ret void
}

declare dso_local i32 @pthread_spin_lock(i32*) #1

declare dso_local %struct.mlx4_wqe_srq_next_seg* @get_wqe(%struct.mlx4_srq*, i32) #1

declare dso_local i32 @htobe16(i32) #1

declare dso_local i32 @pthread_spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
